[gd_scene load_steps=4 format=3 uid="uid://b6vc6tnmg4sio"]

[ext_resource type="Script" path="res://scripts/computer.gd" id="1_1vj64"]
[ext_resource type="Texture2D" uid="uid://b1q2gi7no3arl" path="res://sprites/placeholder_computer.png" id="2_r4050"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwcp5"]
size = Vector2(64, 64)

[node name="computer" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_1vj64")
interaction_duration = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jwcp5")

[node name="VirusTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_r4050")
hframes = 2
vframes = 3

[node name="ImunityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="VirusTimer" to="." method="_on_virus_timer_timeout"]
